force-app/main/default/objects/Pay_Period__c/Pay_Period__c.object-meta.xml
<CustomObject>
    <label>Pay Period</label>
    <nameField>
        <displayFormat>PayPeriod-{YYYY}-{000000}</displayFormat>
        <label>Pay Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>