force-app/main/default/objects/Pay_Period__c/fields/Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Date__c</fullName>
    <label>Pay Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>