force-app/main/default/objects/Pay_Period__c/fields/Pay_Period_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period_Calendar__c</fullName>
    <label>Pay Period Calendar</label>
    <referenceTo>Pay_Period_Calendar__c</referenceTo>
    <relationshipLabel>Pay Periods</relationshipLabel>
    <relationshipName>Pay_Periods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>